<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo_normal_oscuro"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.UniversidadDelAtlantico.RetoCapturer.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingTop="100dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/edittextstyle"
                android:hint="@string/usuario"
                android:inputType=""
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittextstyle"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/buttonstyleselector"
                android:text="@string/ingresar"
                android:textColor="#fff"
                android:textColorLink="#d07400"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

